@@ -36,6 +36,13 @@ Post-v3.1.0
        process extra privileges when mapping physical interconnect memory.
    - SRv6 Tunnel Protocol
      * Added support for userspace datapath (only).
+   - Userspace datapath:
+     * Added new configuration options 'kpkts_rate' and 'kpkts_burst' for
+      'egress-policer' to support packet-per-second policing.
+       Examples:
+       ovs-vsctl set port vhost-user0 qos=@newqos -- \
+          --id=@newqos create qos type=egress-policer \
+          other-config:kpkts_rate=123 other-config:kpkts_burst=123
 
 
 v3.1.0 - 16 Feb 2023
